--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   hexcolor: ^1.0.4
+  intro_slider: ^2.3.3
+  otp_text_field:
+  
 
 dev_dependencies:
   flutter_test:
@@ -47,8 +50,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/smartphone.png
-    - assets/watch.jpg
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
