--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-
-    - assets/smartphone.png
-    - assets/watch.jpg
+    - assets/
 
