--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   hexcolor: ^1.0.4
   intro_slider: ^2.3.3
   otp_text_field:
+  pin_code_text_field: ^1.7.1
   
 
   share: ^0.6.5+2
