--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,18 +10,14 @@ dependencies:
   flutter:
     sdk: flutter
 
-  cupertino_icons: ^0.1.3
+  cupertino_icons: ^1.0.0
   hexcolor: ^1.0.4
   intro_slider: ^2.3.3
   otp_text_field:
   pin_code_text_field: ^1.7.1
-  
-
+  dio: ^3.0.10
   share: ^0.6.5+2
-
   image_picker: ^0.6.7+11
-
-
 
 dev_dependencies:
   flutter_test:
@@ -31,4 +27,3 @@ flutter:
   uses-material-design: true
   assets:
     - assets/
-
