--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   hive: ^1.4.4
   hive_flutter: ^0.3.1
   path_provider: ^1.6.18
+  provider: ^4.3.2+2
 
 dev_dependencies:
   flutter_test:
