--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   hive_flutter: ^0.3.1
   path_provider: ^1.6.18
   provider: ^4.3.2+2
+  flutter_svg: ^0.19.0
+  cached_network_image: ^2.3.2+1
 
 dev_dependencies:
   flutter_test:
