--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.9.3 <3.0.0"
 
 dependencies:
   flutter:
@@ -23,7 +23,9 @@ dependencies:
   path_provider: ^1.6.18
   provider: ^4.3.2+2
   flutter_svg: ^0.19.0
+  flutter_native_image: ^0.0.5
   cached_network_image: ^2.3.2+1
+  fluttertoast: ^7.1.1
 
 dev_dependencies:
   flutter_test:
