--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   provider: ^4.3.2+2
   flutter_svg: ^0.19.0
   cached_network_image: ^2.3.2+1
+  url_launcher: ^5.7.2
 
 dev_dependencies:
   flutter_test:
