--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_native_image: ^0.0.5
   cached_network_image: ^2.3.2+1
   fluttertoast: ^7.1.1
+  get: ^3.12.1
 
 dev_dependencies:
   flutter_test:
